--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -3,15 +3,15 @@
 #
 # Before building the container image run:
 #
-# ./mvnw package -Pnative
+# ./gradlew build -Dquarkus.package.type=native
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/code-with-quarkus .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/road.runner .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/code-with-quarkus
+# docker run -i --rm -p 8080:8080 quarkus/road.runner
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
@@ -19,7 +19,7 @@ WORKDIR /work/
 RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
-COPY --chown=1001:root target/*-runner /work/application
+COPY --chown=1001:root build/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
